ispCP ω 1.0.1 Changelog
~~~~~~~~~~~~~~~~~~~~~~~~~~
2009-05-14 Malte Geierhos
	- ENGINE:
		* Fixed #1843: Missing Alias for Awstats static icons
		* Fixed #1844: outdated Centos Packages (thanks to Laurence Alfred Barlow)

2009-05-13 Benedikt Heintel
	- GUI:
		* Fixed #1776: translate foreign language comments
		* Fixed #1812: order e-mail misses link url to admin panel

2009-05-13 Malte Geierhos
	- ENGINE:
		* Fixed #1841: (wrong package name in centos packagelist)
		* Fixed #1842: BASE_SERVER_VHOST_PREFIX missing in dmn_entry.tpl

2009-05-12 Daniel Andreca
	- GUI:
		* Fixed #1837: admin/ip_manage.php error

2009-05-03 Daniel Andreca
	- CONFIGS:
		* Repaired support for Ubuntu
	- GUI:
		* Improve ip management
		* Fixed #1826: Alias Subdomains aren't deleted from DB
		* Fixed #1820: Email forward validation missing

2009-05-07 Thomas Häber
	- LANGUAGES:
		* added (missing) translation strings
		* fixed translations for e-mails with {BASE_SERVER_VHOST_PREFIX}
	- GUI:
		* code cleanup (some refactoring, coding style ...)
		* added hint about {BASE_SERVER_VHOST_PREFIX} in table header
		* added Zend as external repository into include library of ispCP GUI

2009-05-07 Benedikt Heintel
	- LANGUAGES:
		* Upated: Catalan
		* Update: Portugese (Brazil)

2009-05-03 Daniel Andreca
	- ENGINE:
		* Added Feature: DNS management support. - thanks to Blondak
		* Fixed #1814: r1725 raises regression
		* One more fix to ticket #1499: Where am i?
	- GUI:
		* Fixed Double encoding in logs

2009-05-02 Daniel Andreca
	- ENGINE:
		* Added Feature: Virtual network cards can be added with addon ip from gui
	- GUI:
		* Fixed #1810: bug in admin/server_status.php

2009-04-29 Thomas Häber
	- GUI:
		* Added Feature: Show cpu cores in admin system tools - thanks to qisback
		* Fixed #1721: e-Mail from Supportsystem has problems with special chars. - thanks to Thomas Wacker
		* Fixed #1689: Support ticket priority in email - big thanks to Thomas Wacker

2009-04-27 Christian Hernmarck
	- GUI: